--- a/app/protocol/(1-concepts)/delegation/page.mdx
+++ b/app/protocol/(1-concepts)/delegation/page.mdx
@@ -25,7 +25,7 @@ To delegate your FLIP tokens to an operator:
 2. Connect your Ethereum wallet that contains FLIP tokens.
 3. Follow the on-screen steps to complete your delegation.
 
-The delegation process will guide you through selecting an operator and confirming your delegation transaction.
+The delegation process will guide you through selecting an Operator and confirming your delegation transaction.
 
 ## How Chainflip Delegation Works
 
