--- a/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
@@ -59,7 +59,7 @@ transactions sent by the Chainflip protocol. The boost or deposit fee paid will 
 not be refunded.
 
 <Callout type="warning">
-  if overriding live price slippage protection - This tolerance should account
+  If overriding live price slippage protection - the tolerance should account
   for network fees and broker fees. For example, if the network fee is 0.1% and
   the broker fee is 1.5% - the live price slippage tolerance should be set to at
   least 0.25% to avoid refunds. The recommended value returned from the quote
