fix: add more text

--- a/app/protocol/(1-concepts)/delegation/page.mdx
+++ b/app/protocol/(1-concepts)/delegation/page.mdx
@@ -84,16 +84,15 @@ After the bonding period ends, you are free to withdraw your funds. This process
 ## Gross Earning Potential Estimates
 
 <Callout type="info">
-    This is just an estimate. The actual numbers may vary.
+    This is just an estimate. The actual numbers may vary. Please use these figures as a guide for understanding the potential economics of Chainflip delegation.
 </Callout>
 
-Here we provide a rough breakdown of costs and revenue estimations.
+This section provides an estimated breakdown of potential costs and revenues for Chainflip Operators. These calculations are designed to give you a foundational understanding of the economic factors involved in participating in the network, taking into account different operational setups.
 
-These are the variables and assumptions used for the calculations:
 
-### Constants and Variables
+### Constants and assumptions
 
-* Network Estimates
+The following variables and assumptions underpin these example calculations. These figures are crucial for interpreting the revenue and cost estimates provided in the subsequent case studies:
 
 | **Network Estimates**                          |             |
 |:-----------------------------------------------|------------:|
@@ -115,6 +114,8 @@ These are the variables and assumptions used for the calculations:
 
 ### Case1: Managed RPCs
 
+This scenario outlines the estimated earnings and costs for Operators utilizing a managed Remote Procedure Call (RPC) service. Managed RPCs typically offer convenience and lower operational overhead but may incur higher direct service fees compared to self-hosting.
+
 |                                    |     1 Node |    3 Nodes |    5 Nodes |    10 Nodes |
 |:-----------------------------------|-----------:|-----------:|-----------:|------------:|
 | **Total Node Revenue (FLIP)**      |   2,069.71 |   6,209.12 |  10,348.53 |   20,697.05 |
@@ -133,6 +134,8 @@ These are the variables and assumptions used for the calculations:
 | **Net Yield Yearly**               |      9.74% |      9.74% |      9.74% |       9.74% |
 
 ### Case 2: Self Hosted RPCs
+
+This scenario details the estimated economics for Operators who choose to self-host their Remote Procedure Call (RPC) services. Self-hosting can potentially reduce recurring costs but often requires more technical expertise and management.
 
 |                                    |     1 Node |    3 Nodes |    5 Nodes |    10 Nodes |
 |:-----------------------------------|-----------:|-----------:|-----------:|------------:|
