--- a/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
+++ b/app/brokers/(3-techincal-docs)/javascript-sdk/params/page.mdx
@@ -61,9 +61,9 @@ not be refunded.
 <Callout type="warning">
   If overriding live price slippage protection - the tolerance should account
   for network fees and broker fees. For example, if the network fee is 0.1% and
-  the broker fee is 1.5% - the live price slippage tolerance should be set to at
-  least 0.25% to avoid refunds. The recommended value returned from the quote
-  takes these fees into account.
+  the broker fee is 0.15% - the live price slippage tolerance should be set to
+  at least 0.25% to avoid refunds. The recommended value returned from the quote
+  <strong>already</strong> accounts for these fees.
 </Callout>
 
 <Callout type="warning">
