fix: link to nodes page is broken

--- a/app/validators/(2-guides)/mainnet/funding/page.mdx
+++ b/app/validators/(2-guides)/mainnet/funding/page.mdx
@@ -44,7 +44,7 @@ Registering your node as a validator requires the node's balance to be a minimum
 sudo chainflip-cli --config-root /etc/chainflip register-account-role Validator
 ```
 
-After succesfully registering your node you should see the new node on "**My Nodes**" page.
+After succesfully registering your node you should see the new node on "**My Nodes (legacy)**" page.
 
 ### Rotate Keys
 
@@ -151,7 +151,7 @@ Your node will cease to participate in auctions. When your node has left the val
 
 ### Redemption Process in Auctions App
 
-The redemption process is initiated via the [Chainflip Auctions App](https://auctions.chainflip.io/auctions) > **My Nodes** alongside the Chainflip CLI. You will need the address of the Ethereum account to which you want your `$FLIP` to be sent.
+The redemption process is initiated via the [Chainflip Auctions App](https://auctions.chainflip.io/auctions) > **My Nodes (legacy)** alongside the Chainflip CLI. You will need the address of the Ethereum account to which you want your `$FLIP` to be sent.
 
 In the Auctions App, select "Redeem". This will guide you through the process.
 
@@ -276,7 +276,7 @@ Now, if you want to redeem, you must explicitly provide this address as the exec
 chainflip-cli redeem --exact 15314 <REDEEM_ADDRESS> <EXECUTOR_ADDRESS>
 ```
 
-This can also be done via [Auctions App > My Nodes](https://auctions.chainflip.io/nodes).
+This can also be done via [Auctions App > My Nodes (legacy)](https://auctions.chainflip.io/operators?tab=legacy-nodes).
 
 ### Restricted Balances
 
