--- a/app/validators/(1-concepts)/delegation/page.mdx
+++ b/app/validators/(1-concepts)/delegation/page.mdx
@@ -28,7 +28,7 @@ Most of the following functionality is accessible via the [Operator App](https:/
 Operators manage some settings related to delegation:
 
 - `fee_bps`: `integer`
-This is the fee that will be taken from teh delegators' share of rewards, measured in basis points (0.01%).
+This is the fee that will be taken from the delegators' share of rewards, measured in basis points (0.01%).
 - `delegation_acceptance`: `Allow` | `Deny`
 This determines if delegation is allowed or denied by default. If set to `Deny`, then delegators must explicitly be `allow`ed. If set to `Allow`, then delegators can can delegate freely unless they are `block`ed.
 
