fix: app links fixes

--- a/app/validators/(1-concepts)/delegation/page.mdx
+++ b/app/validators/(1-concepts)/delegation/page.mdx
@@ -23,7 +23,7 @@ The Operator determines the delegation fee that is levied on delegated funds, an
 
 ### Operator Settings and Interactions
 
-Most of the following functionality is accessible via the [Operator App](https://auctions.perseverance.chainflip.io/operators).
+Most of the following functionality is accessible via the [Operator App](https://auctions.chainflip.io/operators).
 
 Operators manage some settings related to delegation:
 
