--- a/app/protocol/(2-guides)/how-swapping-works/page.mdx
+++ b/app/protocol/(2-guides)/how-swapping-works/page.mdx
@@ -12,7 +12,7 @@ Let's look at how native cross-chain swaps are done from end to end in the Chain
 
 ## Initiating a Swap
 
-Either through the [Swapping App](https://swap-perseverance.chainflip.io/) or the [Chainflip SDK](/brokers/javascript-sdk), there are two methods to start a Chainflip swap:
+Either through the [Swapping App](https://swap.chainflip.io) or the [Chainflip SDK](/brokers/javascript-sdk), there are two methods to start a Chainflip swap:
 
 1. Registering an intent to swap using a [Broker and creating a Deposit Channel](/brokers/broker-deposit-channels-swaps#deposit-channels)
 2. Calling the swap function in Chainflip [Vault contracts](/brokers/broker-vault-swaps) — which can either be done by the user or by other contracts for maximum composability
